Compile with Java 8
This allows more people to use this project, especially the poor ones that are still stuck on Spark 2.4 😉